...
    enum Tab: String, CaseIterable {
        case home            = "tab_home"
        case record          = "tab_record"
        case history         = "tab_history"
        case widgetSettings  = "tab_widget_settings"
        case assistant       = "tab_assistant"
        case todo            = "tab_todo"
        case scratch         = "tab_scratch"
        case routine         = "tab_routine"
        case calendar        = "tab_calendar"
        case weather         = "tab_weather"
        case mail            = "tab_mail"
        case sentence        = "tab_sentence"
...
